<resources>
    <string name="app_name">VietChild Vocab</string>
    <string name="title_activity_main_navigation">MainNavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="progressbar_title">Updating database</string>
    <string name="progressbar_message">Please wait ...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- NAVIGATION HEADER : Nơi chứa text về User Information -->
    <string name="user_info_btnUserEdit">EDIT PROFILE</string>
    <string name="user_info_btnUserEdit_Login">LOGIN</string>
    <string name="user_info_btnUserLogout">LOGOUT</string>
    <string name="user_info_tvUserName">SIGN IN TO GET MORE...</string>

    <!-- USER SETTING FRAGMENT -->
    <string name="user_setting_lblTilte">USER PROFILE</string>
    <string name="user_setting_lblEmail">Email:</string>
    <string name="user_setting_lblUserName">Nickname:</string>
    <string name="user_setting_lblOldPassword">Old Password</string>
    <string name="user_setting_lblNewPassword">New Password</string>
    <string name="user_setting_btnEditProfile">Edit</string>
    <string name="user_setting_btnSaveProfile">Save</string>
    <string name="user_setting_changePassword">Change Password</string>

    <!-- Auth -->
    <string name="user_change_password_fail">Can not change password. Try again please</string>
    <string name="user_change_username_fail">Can not change username. Try again please</string>
    <string name="user_change_password_success">Profile changed successfully</string>
    <!-- Interface -->
    <string name="progressdialog_loading">Loading...</string>

    <!-- Add new course -->
    <string name="added_new_course">New course has been added successfully</string>
    <string name="added_new_module">New module has been added successfully</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_navigation">NavigationActivity</string>
</resources>
