<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="center_vertical"
    android:orientation="horizontal"

    android:theme="@style/ThemeOverlay.AppCompat.Dark"    >

    <ImageView
        android:id="@+id/imgUserAvatar"
        app:srcCompat="@drawable/defaultavatar"
        android:layout_height="90dp"
        android:layout_width="90dp" />

    <RelativeLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
        android:id="@+id/relativeLayoutUser"
        android:paddingLeft="10dp"
        android:paddingTop="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_info_tvUserName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/tvUserName"
            android:layout_alignParentTop="true"
             />

        <TextView
         android:id="@+id/tvUserEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text=""
         android:layout_below="@+id/tvUserName"
         android:layout_alignLeft="@+id/tvUserName"
         android:layout_alignStart="@+id/tvUserName" />
        <TextView
            android:text="COIN:  "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUserEmail"
            android:layout_alignLeft="@+id/tvUserEmail"
            android:layout_alignStart="@+id/tvUserEmail"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textStyle="normal|bold"
            android:textColor="@android:color/holo_orange_light"
            android:id="@+id/textviewCC" />

        <TextView
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvUserCoin"
            android:textStyle="normal|bold"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="14sp"
            android:layout_alignBaseline="@+id/textviewCC"
            android:layout_alignBottom="@+id/textviewCC"
            android:layout_toRightOf="@+id/textviewCC"
            android:layout_toEndOf="@+id/textviewCC" />

        <Button
            android:text="@string/user_info_btnUserLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonUserLogout"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:text="@string/user_info_btnUserEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonUserEdit"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />


    </RelativeLayout>


</LinearLayout>
